--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,5 +14,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script defer src="https://static.getbutton.io/widget/bundle.js?id=rNNA6"></script>
   </body>
 </html>
